// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders CSF2Secondary story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      <div
        data-testid="decorator-string"
      >
        Global Decorator
      </div>
      <br />
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        Children coming from story args!
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF2StoryWithLocale story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      <div
        data-testid="decorator-string"
      >
        Global Decorator
      </div>
      <br />
      <p>
        locale: 
        en
      </p>
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        Hello!
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF2StoryWithParamsAndDecorator story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      <div
        data-testid="decorator-string"
      >
        Global Decorator
      </div>
      <br />
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3Button story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      <div
        data-testid="decorator-string"
      >
        Global Decorator
      </div>
      <br />
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3ButtonWithRender story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      <div
        data-testid="decorator-string"
      >
        Global Decorator
      </div>
      <br />
      <div>
        <p
          data-testid="custom-render"
        >
          I am a custom render function
        </p>
        <button
          class="storybook-button storybook-button--medium storybook-button--secondary"
          type="button"
        >
          foo
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3Primary story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      <div
        data-testid="decorator-string"
      >
        Global Decorator
      </div>
      <br />
      <button
        class="storybook-button storybook-button--large storybook-button--primary"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders WithLoader story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      <div
        data-testid="decorator-string"
      >
        Global Decorator
      </div>
      <br />
      <div>
        <div
          data-testid="loaded-data"
        >
          loaded data
        </div>
        <div
          data-testid="mock-data"
        >
          mockFn return value
        </div>
      </div>
    </div>
  </div>
</body>
`;
